--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">HungryPeople</string>
     <string name="action_settings">Settings</string>
 
-    <string name="category">Category</string>
+
 
 
 
@@ -40,5 +40,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="phone">"Phone"</string>
 
 </resources>
