--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
     <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
     <string name="deadline_time_mock" translatable="false">24 minutes</string>
-    <string name="request_btn_text" translatable="false">REQUEST</string>
+    <string name="request_btn_text" translatable="false">VIEW DETAILS</string>
     <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
     <string name="content_from1_mock">W 90th St</string>
     <string name="content_from2_mock">New York, NY 10025</string>
@@ -41,5 +41,7 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="phone">"Phone"</string>
+    <string name="Restaurant">RESTAURANT</string>
+
 
 </resources>
