--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,6 @@
     <string name="action_settings">Settings</string>
 
 
-
-
-
     <string name="order_id_mock" translatable="false"># 1234–5678</string>
     <string name="price_mock" translatable="false">$25</string>
     <string name="requests_count_mock" translatable="false">5</string>
@@ -41,5 +38,6 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="phone">"Phone"</string>
+    <string name="last_name">"Lastname: "</string>
 
 </resources>
